--- a/index.html
+++ b/index.html
@@ -7,7 +7,31 @@
       <title>Document</title>
    </head>
    <body>
-      <h1>Clienture Landing page</h1>
+
+      <header>
+         <div class="content">
+            <div class="logo-wrap">
+               <!-- <img src="/assets/circle.svg" alt="colourful circle" class="circle" /> -->
+               <img src="/assets/logo-light-blue.svg" alt="colourful circle" id="text-logo" />
+            </div>
+            <!-- <img src="/assets/big-text.svg" height="257" /> -->
+            <div class="text-wrap">
+               <p class="contact-text">
+                  Salesforce integrations and consulting
+               </p>
+               <a href="#">contact us</a>
+            </div>
+         </div>
+      </header>
+
+      <div class="content">
+         <p>By seamlessly connecting your tools and data, we empower you to make faster, smarter decisions that drive success.</p>
+         <p>Elevate your customer interactions and operational efficiency to outpace your competitors and dominate your market.</p>
+         <h2>
+            don't just addapt<br />
+            LEAD WITH INNOVATION
+         </h2>
+      </div>
 
       <script src="script.js"></script>
    </body>
