--- a/index.html
+++ b/index.html
@@ -7,12 +7,19 @@
       <title>Document</title>
    </head>
    <body>
-
       <header>
          <div class="content">
             <div class="logo-wrap">
-               <!-- <img src="/assets/circle.svg" alt="colourful circle" class="circle" /> -->
-               <img src="/assets/logo-light-blue.svg" alt="colourful circle" id="text-logo" />
+               <img
+                  src="/assets/circle.svg"
+                  alt="colourful circle"
+                  class="circle"
+               />
+               <img
+                  src="/assets/logo-light-blue.svg"
+                  alt="text logo"
+                  id="text-logo"
+               />
             </div>
             <!-- <img src="/assets/big-text.svg" height="257" /> -->
             <div class="text-wrap">
@@ -24,13 +31,22 @@
          </div>
       </header>
 
-      <div class="content">
-         <p>By seamlessly connecting your tools and data, we empower you to make faster, smarter decisions that drive success.</p>
-         <p>Elevate your customer interactions and operational efficiency to outpace your competitors and dominate your market.</p>
-         <h2>
-            don't just addapt<br />
-            LEAD WITH INNOVATION
-         </h2>
+      <div class="content-2">
+         <div class="content">
+            <p class="description">
+               By seamlessly connecting your tools and data, we empower you to
+               make faster, smarter decisions that drive success.
+            </p>
+            <p class="description">
+               Elevate your customer interactions and operational efficiency to
+               outpace your competitors and dominate your market.
+            </p>
+            <h2>
+               don't just addapt<br />
+               LEAD WITH INNOVATION.
+            </h2>
+         </div>
+         <img src="/assets/line-1.svg" alt="design lines" class="lines-1" />
       </div>
 
       <script src="script.js"></script>
