--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <link rel="stylesheet" href="style.css" />
-      <title>Document</title>
+      <title>Clienture - Innovate to elevate</title>
    </head>
    <body>
       <header>
@@ -47,6 +47,93 @@
             </h2>
          </div>
          <img src="/assets/line-1.svg" alt="design lines" class="lines-1" />
+      </div>
+
+      <div class="content-3">
+         <div class="content">
+            <div class="service-text">
+               <h3 class="main">SERVICES</h3>
+               <h3 class="lower">CONSULTING</h3>
+               <h3 class="lower">IMPLEMENTATION</h3>
+               <h3 class="lower">DEVELOPMENT</h3>
+            </div>
+            <div class="service-list">
+               <a class="service-item" href="#">
+                  <img
+                     src="/assets/Strategic-planning.png"
+                     class="service-img"
+                     alt="strategic planning service"
+                  />
+                  <p class="text">Strategic Planning</p>
+               </a>
+               <a class="service-item" href="#">
+                  <img
+                     src="/assets/Business-analysis.png"
+                     class="service-img"
+                     alt="business analysis service"
+                  />
+                  <p class="text">Business Analysis</p>
+               </a>
+               <a class="service-item" href="#">
+                  <img
+                     src="/assets/Discovery.png"
+                     class="service-img"
+                     alt="discovery service"
+                  />
+                  <p class="text">Discovery</p>
+               </a>
+
+               <a class="service-item" href="#">
+                  <img
+                     src="/assets/Solution-design.png"
+                     class="service-img"
+                     alt="solution design service"
+                  />
+                  <p class="text">Solution Design</p>
+               </a>
+               <a class="service-item" href="#">
+                  <img
+                     src="/assets/Build-and-test.png"
+                     class="service-img"
+                     alt="build and test service"
+                  />
+                  <p class="text">Build & Test</p>
+               </a>
+               <a class="service-item" href="#">
+                  <img
+                     src="/assets/Onboarding.png"
+                     class="service-img"
+                     alt="onboarding service"
+                  />
+                  <p class="text">Onboarding</p>
+               </a>
+
+               <a class="service-item" href="#">
+                  <img
+                     src="/assets/Custom-code.png"
+                     class="service-img"
+                     alt="custom code service"
+                  />
+                  <p class="text">Custom Code</p>
+               </a>
+               <a class="service-item" href="#">
+                  <img
+                     src="/assets/Bespoke-UI.png"
+                     class="service-img"
+                     alt="bespoke ui service"
+                  />
+                  <p class="text">Bespoke UI</p>
+               </a>
+               <a class="service-item" href="#">
+                  <img
+                     src="/assets/Systems-integrations.png"
+                     class="service-img"
+                     alt="systems integration service"
+                  />
+                  <p class="text">Systems Integration</p>
+               </a>
+            </div>
+         </div>
       </div>
 
       <script src="script.js"></script>
