--- a/index.html
+++ b/index.html
@@ -46,7 +46,6 @@
                LEAD WITH INNOVATION.
             </h2>
          </div>
-         <img src="/assets/line-1.svg" alt="design lines" class="lines-1" />
       </div>
 
       <div class="content-3">
@@ -133,6 +132,53 @@
                   <p class="text">Systems Integration</p>
                </a>
             </div>
+         </div>
+      </div>
+
+      <div class="content-4">
+         <div class="content">
+            <h3>ABOUT US</h3>
+            <h4 class="paragraph-header">our philosophy:</h4>
+            <p class="text">
+               At Clienture, we believe that technology should adapt to people,
+               not the other way around.<br />
+               Our philosophy centers on embedding your unique business culture
+               into the Salesforce solutions we create, ensuring they are
+               perfectly attuned to your needs.
+            </p>
+            <h4 class="paragraph-header">our journey:</h4>
+            <p class="text">
+               Clienture was founded by CRM specialists who envisioned a
+               consulting firm that operates at the intersection of technology
+               and cultural understanding. Today, we are proud to be the go-to
+               experts for culturally-infused Salesforce solutions.
+            </p>
+            <h4 class="paragraph-header">OUR APPROACH:</h4>
+            <div class="spacing">
+               <p class="text">
+                  Deep Dive Into Your Needs: We start by identifying business
+                  goals, stakeholders, and relevant data and then assess how your
+                  technical requirements could be optimized to better serve all
+                  three.
+               </p>
+               <p class="text">
+                  Build a strategy: Based on our initial analysis, we roadmap your
+                  integration with endpoints, third-party tools, and data delivery
+                  performance in mind.
+               </p>
+               <p class="text">
+                  Integration of Data: Our Salesforce integration experts oversee a
+                  smooth data migration from your legacy systems to your Salesforce
+                  CRM.
+               </p>
+               <p class="text">
+                  Ongoing Support & Maintenance: Our work doesn't end with
+                  integration. We maintain peak performance for your systems with
+                  continuous upkeep and optimization, support services, and user
+                  training.
+               </p>
+            </div>
+            <h2>BUILDING CLIENT MANAGEMENT CULTURE.</h2>
          </div>
       </div>
 
