--- a/index.html
+++ b/index.html
@@ -157,28 +157,94 @@
             <div class="spacing">
                <p class="text">
                   Deep Dive Into Your Needs: We start by identifying business
-                  goals, stakeholders, and relevant data and then assess how your
-                  technical requirements could be optimized to better serve all
-                  three.
+                  goals, stakeholders, and relevant data and then assess how
+                  your technical requirements could be optimized to better serve
+                  all three.
                </p>
                <p class="text">
-                  Build a strategy: Based on our initial analysis, we roadmap your
-                  integration with endpoints, third-party tools, and data delivery
-                  performance in mind.
+                  Build a strategy: Based on our initial analysis, we roadmap
+                  your integration with endpoints, third-party tools, and data
+                  delivery performance in mind.
                </p>
                <p class="text">
-                  Integration of Data: Our Salesforce integration experts oversee a
-                  smooth data migration from your legacy systems to your Salesforce
-                  CRM.
+                  Integration of Data: Our Salesforce integration experts
+                  oversee a smooth data migration from your legacy systems to
+                  your Salesforce CRM.
                </p>
                <p class="text">
                   Ongoing Support & Maintenance: Our work doesn't end with
-                  integration. We maintain peak performance for your systems with
-                  continuous upkeep and optimization, support services, and user
-                  training.
+                  integration. We maintain peak performance for your systems
+                  with continuous upkeep and optimization, support services, and
+                  user training.
                </p>
             </div>
             <h2>BUILDING CLIENT MANAGEMENT CULTURE.</h2>
+         </div>
+      </div>
+
+      <div class="content-5">
+         <div class="content">
+            <div class="form-wrap">
+               <div class="header-wrap">
+                  <h2>Let's elevate your salesforce experience together!</h2>
+                  <p>
+                     Reach out now to discuss your unique needs and how our
+                     expert integration and consulting services can help drive
+                     your success.
+                  </p>
+               </div>
+               <form>
+                  <input
+                     type="text"
+                     name="name"
+                     id="name"
+                     placeholder="Name"
+                     class="form-element"
+                  />
+                  <input
+                     type="email"
+                     name="email"
+                     id="email"
+                     placeholder="Email address"
+                     class="form-element"
+                  />
+                  <input
+                     type="tel"
+                     name="phone"
+                     id="phone"
+                     placeholder="Phone number"
+                     class="form-element"
+                  />
+                  <input
+                     type="text"
+                     name="web"
+                     id="web"
+                     placeholder="Your website"
+                     class="form-element"
+                  />
+                  <input
+                     type="text"
+                     name="country"
+                     id="country"
+                     placeholder="Country"
+                     class="form-element"
+                  />
+                  <textarea
+                     name="project"
+                     id="project"
+                     placeholder="Tell us about your project"
+                     class="form-element"
+                  ></textarea>
+                  <input type="submit" value="contact us" />
+               </form>
+            </div>
+            <div class="img-wrap">
+               <img
+                  src="/assets/spaceship.svg"
+                  alt="spaceship"
+                  class="spaceship"
+               />
+            </div>
          </div>
       </div>
 
