--- a/index.html
+++ b/index.html
@@ -23,10 +23,157 @@
             </div>
             <!-- <img src="/assets/big-text.svg" height="257" /> -->
             <div class="text-wrap">
-               <p class="contact-text">
-                  Salesforce integrations and consulting
-               </p>
-               <a href="#">contact us</a>
+               <?xml version="1.0" encoding="UTF-8"?>
+               <svg
+                  id="Layer_1"
+                  data-name="Layer 1"
+                  xmlns="http://www.w3.org/2000/svg"
+                  xmlns:xlink="http://www.w3.org/1999/xlink"
+                  viewBox="0 0 1096.82 257.08"
+                  class="innovate-text"
+               >
+                  <defs>
+                     <style>
+                        .cls-1 {
+                           fill: none;
+                        }
+
+                        .cls-1,
+                        .cls-2 {
+                           stroke-width: 0px;
+                        }
+
+                        .cls-3 {
+                           clip-path: url(#clippath);
+                        }
+
+                        .cls-2 {
+                           fill: #dffffa;
+                        }
+                     </style>
+                     <clipPath id="clippath">
+                        <rect class="cls-1" width="1096.82" height="257.08" />
+                     </clipPath>
+                  </defs>
+                  <g class="cls-3">
+                     <g id="Group_34" data-name="Group 34">
+                        <path
+                           id="Path_60"
+                           data-name="Path 60"
+                           class="cls-2"
+                           d="M15.14,249.13l-13.1-.7c-1.05.09-1.97-.68-2.06-1.72-.02-.18,0-.36.03-.54l3.78-71.13c-.09-1.05.68-1.97,1.72-2.06.18-.02.36,0,.54.03l13.1.69c1.05-.09,1.97.68,2.06,1.72.02.18,0,.36-.03.54l-3.78,71.14c.09,1.05-.68,1.97-1.72,2.06-.18.02-.36,0-.54-.03"
+                        />
+                        <path
+                           id="Path_61"
+                           data-name="Path 61"
+                           class="cls-2"
+                           d="M85.71,189.85c3.87,2.55,6.91,6.18,8.75,10.44,2.05,4.8,2.94,10.02,2.6,15.23l-1.51,35.13c.1,1.04-.66,1.98-1.7,2.08-.18.02-.36.01-.54-.02l-12.25-.53c-1.04.1-1.98-.66-2.08-1.7-.02-.18-.01-.36.02-.54l1.43-33.3c.18-2.78-.25-5.56-1.26-8.15-.89-2.25-2.43-4.18-4.42-5.54-2.09-1.38-4.53-2.14-7.03-2.18-2.78-.14-5.55.43-8.04,1.67-2.42,1.18-4.51,2.95-6.06,5.15-1.5,2.07-2.37,4.54-2.49,7.1l-1.46,34c.1,1.04-.66,1.98-1.7,2.08-.18.02-.36.01-.54-.02l-12.19-.52c-1.04.1-1.97-.66-2.08-1.7-.02-.18-.01-.36.02-.54l2.6-60.54c-.1-1.04.66-1.98,1.7-2.08.18-.02.36-.01.54.02l9.4.4c1.12-.03,2.09.74,2.34,1.82l1.63,5.88c2.8-2.53,6.06-4.5,9.61-5.8,3.49-1.41,7.24-2.08,11.01-1.98,4.85.1,9.58,1.53,13.68,4.14"
+                        />
+                        <path
+                           id="Path_62"
+                           data-name="Path 62"
+                           class="cls-2"
+                           d="M161.01,192.19c3.91,2.49,7.01,6.07,8.92,10.3,2.12,4.77,3.1,9.97,2.84,15.19l-.95,35.15c.12,1.04-.63,1.99-1.67,2.11-.18.02-.36.02-.54-.01l-12.25-.33c-1.04.12-1.99-.63-2.11-1.67-.02-.18-.02-.36.01-.54l.9-33.32c.14-2.78-.34-5.56-1.39-8.13-.92-2.23-2.49-4.14-4.51-5.47-2.11-1.35-4.56-2.06-7.07-2.07-2.78-.1-5.54.52-8.01,1.8-2.4,1.22-4.46,3.02-5.98,5.24-1.47,2.1-2.3,4.58-2.37,7.14l-.92,34.02c.12,1.04-.63,1.99-1.67,2.11-.18.02-.36.02-.54-.01l-12.2-.33c-1.04.12-1.99-.63-2.11-1.67-.02-.18-.02-.36.01-.54l1.64-60.57c-.12-1.04.63-1.99,1.67-2.11.18-.02.36-.02.54.01l9.41.25c1.11-.04,2.11.7,2.37,1.79l1.72,5.85c2.76-2.58,5.99-4.6,9.52-5.95,3.47-1.46,7.21-2.2,10.98-2.15,4.85.02,9.61,1.38,13.74,3.92"
+                        />
+                        <path
+                           id="Path_63"
+                           data-name="Path 63"
+                           class="cls-2"
+                           d="M198.32,252.43c-5.1-2.97-9.34-7.22-12.29-12.33-3-5.14-4.53-11-4.43-16.94,0-6.01,1.64-11.91,4.74-17.06,9.83-16.3,31.02-21.54,47.31-11.7,4.96,2.99,9.08,7.18,11.99,12.18,3.02,5.2,4.56,11.12,4.46,17.13,0,5.96-1.65,11.79-4.76,16.87-6.36,10.4-17.73,16.67-29.92,16.51-6.01,0-11.91-1.61-17.08-4.65M224.61,238.98c5.57-3.17,9-9.11,8.97-15.52.06-3.22-.74-6.4-2.32-9.21-1.52-2.71-3.72-4.98-6.4-6.56-5.49-3.2-12.26-3.25-17.79-.14-2.7,1.54-4.94,3.77-6.5,6.45-1.63,2.78-2.48,5.95-2.47,9.17-.14,6.41,3.2,12.4,8.72,15.66,5.49,3.2,12.26,3.25,17.8.14"
+                        />
+                        <path
+                           id="Path_64"
+                           data-name="Path 64"
+                           class="cls-2"
+                           d="M291.06,255.24l-12.26.16c-1.12.08-2.15-.62-2.49-1.69l-24.44-60.39c-.15-.28-.23-.59-.23-.91-.02-.44.17-.85.5-1.13.4-.31.91-.47,1.42-.45l13.71-.18c1.15-.12,2.21.62,2.5,1.74l14.91,42.98,13.79-43.35c.26-1.12,1.3-1.89,2.45-1.8l13.71-.18c.5-.03.99.11,1.4.39.36.25.56.66.55,1.09,0,.33-.06.67-.2.97l-22.87,61c-.31,1.08-1.33,1.8-2.45,1.75"
+                        />
+                        <path
+                           id="Path_65"
+                           data-name="Path 65"
+                           class="cls-2"
+                           d="M372.03,187.9l9.19-.36c1.03-.19,2.02.49,2.21,1.52.03.18.04.36.02.54l2.4,60.54c.19,1.03-.49,2.02-1.53,2.21-.18.03-.36.04-.54.02l-9.51.38c-1.12.09-2.15-.6-2.49-1.68l-1.24-4.26c-4.42,5.12-10.83,8.09-17.59,8.18-5.87.28-11.7-1.05-16.86-3.85-5.14-2.76-9.45-6.83-12.49-11.8-3.14-5.05-4.89-10.83-5.08-16.77-.56-11.93,5.27-23.27,15.31-29.74,4.91-3.18,10.6-4.96,16.45-5.15,7.31-.29,13.4,1.96,18.29,6.75l1.1-4.72c.25-1.09,1.23-1.85,2.35-1.82M361.34,236.56c2.55-1.6,4.61-3.87,5.95-6.56,1.42-2.86,2.07-6.04,1.89-9.22-.08-3.21-.98-6.36-2.62-9.12-1.55-2.62-3.77-4.77-6.43-6.23-2.71-1.48-5.77-2.18-8.85-2.02-3.07.08-6.05,1.02-8.61,2.71-2.51,1.67-4.52,3.99-5.81,6.71-2.7,5.89-2.44,12.71.7,18.37,1.48,2.57,3.65,4.68,6.27,6.07,2.69,1.42,5.72,2.08,8.77,1.91,3.1-.08,6.12-.99,8.75-2.63"
+                        />
+                        <path
+                           id="Path_66"
+                           data-name="Path 66"
+                           class="cls-2"
+                           d="M416.44,250.2l-12.18.82c-1.03.22-2.04-.44-2.25-1.46-.04-.18-.05-.36-.04-.54l-3.21-47.36-5.9.4c-1.03.22-2.04-.44-2.25-1.46-.04-.18-.05-.36-.04-.54l-.74-10.94c-.22-1.03.43-2.04,1.46-2.26.18-.04.36-.05.54-.04l5.79-.39-.78-11.59c-.19-1.18.6-2.29,1.77-2.49l12.18-3.2c.17-.05.35-.08.53-.09.5-.06,1.01.1,1.38.45.36.38.57.89.58,1.42l.97,14.38,10.67-.72c1.03-.22,2.04.44,2.25,1.46.04.18.05.36.04.54l.74,10.94c.22,1.03-.43,2.04-1.46,2.26-.18.04-.36.05-.54.04l-10.73.73,3.21,47.37c.22,1.03-.44,2.04-1.46,2.25-.18.04-.36.05-.54.04"
+                        />
+                        <path
+                           id="Path_67"
+                           data-name="Path 67"
+                           class="cls-2"
+                           d="M452.23,244.45c-5.29-2.42-9.84-6.22-13.16-10.99-3.4-4.83-5.48-10.47-6.04-16.35-.66-5.87.14-11.81,2.32-17.29,2.08-5.3,5.55-9.94,10.04-13.44,4.57-3.55,10.05-5.71,15.81-6.23,5.95-.76,12,.13,17.48,2.57,5.06,2.33,9.34,6.09,12.31,10.81,3.17,5.12,5.1,10.91,5.61,16.91.12,1.14.19,2.39.23,3.76.07,1.09-.76,2.03-1.85,2.1-.07,0-.13,0-.2,0l-44.39,4.58c.95,2.54,2.44,4.85,4.37,6.76,1.83,1.81,4.05,3.18,6.49,4.01,2.47.83,5.09,1.11,7.68.83,2.32-.21,4.59-.82,6.71-1.8,2.04-.98,3.92-2.26,5.58-3.79.36-.37.83-.61,1.33-.68.65-.04,1.28.26,1.65.8l6.56,7.54c.35.37.58.83.68,1.34.05.63-.21,1.24-.7,1.64-5.69,5.53-13.1,8.94-21,9.68-5.98.7-12.05-.25-17.53-2.76M473.32,196.6c-2.97-1.97-6.56-2.8-10.1-2.33-3.58.31-6.93,1.87-9.46,4.41-2.63,2.69-4.3,6.18-4.73,9.92l30.64-3.16c-1.08-3.57-3.31-6.67-6.34-8.83"
+                        />
+                        <path
+                           id="Path_68"
+                           data-name="Path 68"
+                           class="cls-2"
+                           d="M553.54,234.74l-12.07,1.82c-1,.3-2.06-.27-2.37-1.27-.05-.17-.08-.35-.08-.53l-7.07-46.94-5.85.88c-1,.3-2.06-.27-2.37-1.27-.05-.17-.08-.35-.08-.53l-1.63-10.85c-.3-1.01.27-2.06,1.27-2.37.17-.05.35-.08.53-.08l5.74-.87-1.73-11.48c-.29-1.16.41-2.33,1.56-2.63l11.88-4.18c.17-.06.34-.11.52-.13.5-.1,1.01.02,1.41.33.4.35.65.84.7,1.36l2.15,14.25,10.58-1.59c1-.3,2.06.27,2.37,1.27.05.17.08.35.08.53l1.63,10.85c.3,1-.27,2.06-1.27,2.37-.17.05-.35.08-.53.08l-10.63,1.6,7.07,46.94c.3,1.01-.27,2.06-1.27,2.37-.17.05-.35.08-.53.08"
+                        />
+                        <path
+                           id="Path_69"
+                           data-name="Path 69"
+                           class="cls-2"
+                           d="M589.58,225.97c-5.58-1.93-10.55-5.29-14.43-9.75-3.93-4.47-6.56-9.93-7.6-15.78-1.16-5.9-.68-12,1.38-17.65,6.53-17.88,26.31-27.08,44.19-20.56,5.44,1.99,10.29,5.31,14.11,9.66,3.96,4.53,6.6,10.04,7.66,15.96,1.14,5.84.64,11.89-1.44,17.47-4.25,11.42-14.21,19.76-26.2,21.93-5.9,1.15-12,.71-17.66-1.29M612.81,207.74c4.86-4.18,7.09-10.66,5.83-16.95-.55-3.18-1.95-6.15-4.04-8.6-2.01-2.37-4.61-4.17-7.54-5.21-6-2.09-12.65-.84-17.49,3.27-2.36,2.03-4.13,4.64-5.15,7.58-1.06,3.04-1.29,6.31-.66,9.48,1.09,6.32,5.51,11.56,11.56,13.7,6,2.09,12.65.84,17.49-3.27"
+                        />
+                        <path
+                           id="Path_70"
+                           data-name="Path 70"
+                           class="cls-2"
+                           d="M692.78,204c-5.61-1.55-10.7-4.58-14.74-8.77-4.12-4.23-7.07-9.47-8.55-15.18-1.58-5.69-1.74-11.68-.45-17.44,1.21-5.56,3.9-10.7,7.79-14.86,3.95-4.23,9.02-7.23,14.63-8.65,5.76-1.69,11.87-1.77,17.67-.23,5.37,1.5,10.19,4.53,13.86,8.72,3.94,4.55,6.76,9.96,8.22,15.8.3,1.11.57,2.33.82,3.68.24,1.07-.43,2.12-1.49,2.37-.07.01-.13.03-.2.03l-43.1,11.56c1.34,2.36,3.18,4.4,5.39,5.99,2.1,1.5,4.51,2.5,7.05,2.93,2.57.43,5.2.29,7.71-.4,2.26-.58,4.4-1.54,6.34-2.84,1.85-1.29,3.51-2.85,4.91-4.63.29-.42.72-.73,1.21-.88.64-.14,1.31.06,1.76.53l7.67,6.4c.4.31.71.73.88,1.21.15.61,0,1.26-.43,1.73-4.75,6.36-11.52,10.9-19.2,12.88-5.8,1.64-11.93,1.66-17.74.05M706.02,153.4c-3.25-1.48-6.93-1.73-10.35-.7-3.48.87-6.54,2.94-8.64,5.85-2.17,3.07-3.26,6.78-3.1,10.54l29.76-7.98c-1.63-3.35-4.32-6.06-7.66-7.71"
+                        />
+                        <path
+                           id="Path_71"
+                           data-name="Path 71"
+                           class="cls-2"
+                           d="M766.1,185.7l-11.46,3.7c-.94.46-2.08.07-2.54-.87-.08-.16-.14-.34-.17-.51l-24.49-75.88c-.46-.94-.07-2.08.87-2.54.16-.08.34-.14.51-.17l11.46-3.7c.94-.46,2.08-.07,2.54.87.08.16.14.33.17.51l24.49,75.88c.46.94.07,2.08-.87,2.54-.16.08-.34.14-.51.17"
+                        />
+                        <path
+                           id="Path_72"
+                           data-name="Path 72"
+                           class="cls-2"
+                           d="M795.82,172.35c-5.74-.94-11.13-3.4-15.6-7.12-4.55-3.76-8.05-8.65-10.14-14.17-2.19-5.48-2.99-11.42-2.33-17.29.61-5.66,2.73-11.06,6.14-15.62,3.47-4.63,8.19-8.16,13.61-10.18,5.54-2.3,11.61-3.04,17.54-2.14,5.5.91,10.62,3.4,14.73,7.17,4.41,4.1,7.8,9.17,9.88,14.82.41,1.07.82,2.26,1.21,3.57.36,1.03-.19,2.16-1.22,2.51-.07.02-.13.04-.2.06l-41.6,16.15c1.59,2.2,3.64,4.03,6.01,5.37,2.25,1.26,4.75,2,7.32,2.15,2.6.15,5.2-.27,7.63-1.23,2.18-.82,4.21-2,5.99-3.51,1.7-1.49,3.18-3.22,4.38-5.13.25-.45.64-.8,1.11-1.01.62-.21,1.3-.08,1.8.34l8.32,5.54c.44.27.79.65,1.01,1.11.22.59.13,1.25-.24,1.76-4.03,6.83-10.28,12.08-17.7,14.88-5.59,2.26-11.69,2.94-17.63,1.97M803.51,120.63c-3.39-1.12-7.07-.97-10.36.42-3.37,1.24-6.19,3.63-7.96,6.75-1.83,3.29-2.51,7.1-1.94,10.82l28.72-11.15c-1.98-3.15-4.95-5.56-8.45-6.84"
+                        />
+                        <path
+                           id="Path_73"
+                           data-name="Path 73"
+                           class="cls-2"
+                           d="M882.23,141.3l-11.37,4.59c-1.02.48-2.23.2-2.94-.67l-44.65-47.44c-.24-.21-.42-.47-.54-.77-.18-.4-.16-.86.05-1.24.26-.44.67-.77,1.16-.93l12.72-5.13c1.03-.52,2.28-.22,2.96.72l29.46,34.67-2.84-45.41c-.17-1.14.53-2.23,1.63-2.57l12.71-5.13c.45-.21.96-.26,1.45-.15.42.1.76.41.91.82.13.31.19.64.16.98l.77,65.14c.1,1.12-.58,2.16-1.65,2.52"
+                        />
+                        <path
+                           id="Path_74"
+                           data-name="Path 74"
+                           class="cls-2"
+                           d="M934.02,47.77l8.36-3.83c.88-.57,2.06-.31,2.63.57.1.15.17.31.22.49l25.23,55.09c.57.88.31,2.06-.57,2.63-.15.1-.32.17-.49.22l-8.65,3.96c-1,.51-2.22.26-2.94-.6l-2.77-3.46c-2.15,6.41-6.94,11.6-13.17,14.25-5.32,2.49-11.22,3.48-17.06,2.85-5.8-.6-11.33-2.73-16.04-6.17-4.82-3.48-8.64-8.16-11.07-13.59-5.05-10.83-3.96-23.52,2.86-33.33,3.34-4.81,7.92-8.62,13.26-11.01,6.65-3.04,13.14-3.28,19.49-.7l-.77-4.79c-.18-1.1.44-2.18,1.48-2.57M942.62,96.85c1.75-2.45,2.79-5.33,3.02-8.33.23-3.18-.38-6.37-1.75-9.25-1.3-2.94-3.33-5.5-5.89-7.44-2.43-1.83-5.3-2.98-8.32-3.32-3.07-.34-6.17.18-8.95,1.5-2.81,1.24-5.21,3.24-6.93,5.78-1.69,2.5-2.66,5.41-2.83,8.42-.26,6.47,2.58,12.68,7.63,16.73,2.34,1.81,5.15,2.94,8.1,3.24,3.03.29,6.09-.25,8.83-1.56,2.84-1.25,5.28-3.24,7.09-5.76"
+                        />
+                        <path
+                           id="Path_75"
+                           data-name="Path 75"
+                           class="cls-2"
+                           d="M1000.71,87.03l-10.87,5.55c-.86.6-2.04.4-2.65-.46-.1-.15-.19-.31-.25-.48l-21.59-42.28-5.27,2.69c-.86.61-2.04.4-2.65-.46-.1-.15-.19-.31-.25-.48l-4.99-9.77c-.61-.86-.4-2.04.46-2.65.15-.1.31-.19.48-.25l5.17-2.64-5.28-10.34c-.64-1-.35-2.34.65-2.99l9.94-7.73c.14-.11.29-.21.45-.29.44-.25.97-.3,1.44-.13.49.21.88.59,1.09,1.07l6.55,12.83,9.53-4.87c.86-.61,2.04-.4,2.65.46.1.15.19.31.25.48l4.99,9.77c.61.86.4,2.04-.46,2.65-.15.1-.31.19-.48.25l-9.58,4.89,21.59,42.28c.61.86.4,2.04-.46,2.65-.15.1-.31.19-.48.25"
+                        />
+                        <path
+                           id="Path_76"
+                           data-name="Path 76"
+                           class="cls-2"
+                           d="M1031.96,67.16c-5.82-.08-11.51-1.72-16.48-4.74-5.06-3.05-9.24-7.36-12.13-12.52-2.97-5.1-4.64-10.86-4.85-16.76-.24-5.69,1.06-11.34,3.76-16.35,2.75-5.09,6.89-9.28,11.95-12.08,5.14-3.1,11.03-4.72,17.03-4.7,5.57.09,11,1.8,15.62,4.92,4.97,3.4,9.07,7.92,11.96,13.2.57,1,1.14,2.12,1.72,3.35.5.97.13,2.16-.84,2.66-.06.03-.13.06-.19.09l-38.76,22.12c1.9,1.94,4.19,3.45,6.73,4.42,2.41.92,4.99,1.27,7.56,1.04,2.59-.24,5.11-1.04,7.36-2.34,2.04-1.13,3.87-2.6,5.41-4.35,1.46-1.72,2.67-3.65,3.57-5.72.18-.48.51-.89.95-1.16.58-.3,1.28-.28,1.83.07l9.05,4.25c.47.2.87.53,1.16.95.3.55.31,1.22.03,1.78-2.98,7.35-8.37,13.47-15.3,17.33-5.19,3.06-11.12,4.63-17.15,4.55M1031.93,14.88c-3.52-.61-7.14.08-10.19,1.94-3.15,1.73-5.58,4.51-6.88,7.85-1.32,3.53-1.44,7.39-.32,10.99l26.76-15.27c-2.42-2.83-5.72-4.77-9.37-5.52"
+                        />
+                        <path
+                           id="Path_77"
+                           data-name="Path 77"
+                           class="cls-2"
+                           d="M1095.71,32.44l-10.98,6.98c-.8.68-2,.59-2.68-.21-.12-.14-.21-.29-.29-.45l-6.29-9.89c-.68-.8-.59-2,.2-2.68.14-.12.29-.22.46-.29l10.98-6.99c.8-.68,2-.59,2.68.2.12.14.22.29.29.46l6.29,9.89c.68.8.59,2-.2,2.68-.14.12-.29.22-.46.29"
+                        />
+                     </g>
+                  </g>
+               </svg>
+               <div class="lower-text-wrap">
+                  <p class="contact-text">
+                     Salesforce integrations and consulting
+                  </p>
+                  <a href="#">contact us</a>
+               </div>
             </div>
          </div>
       </header>
