fixed responsive design

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                   <p class="contact-text">
                      Salesforce integrations and consulting
                   </p>
-                  <a href="#">contact us</a>
+                  <a href="#" class="purple-btn">contact us</a>
                </div>
             </div>
          </div>
@@ -382,7 +382,9 @@
                      placeholder="Tell us about your project"
                      class="form-element"
                   ></textarea>
-                  <input type="submit" value="contact us" />
+                  <div class="btn-wrap">
+                     <input type="submit" value="contact us" class="purple-btn" />
+                  </div>
                </form>
             </div>
             <div class="img-wrap">
