--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
          <div class="content">
             <div class="logo-wrap">
                <img
-                  src="/assets/circle.svg"
+                  src="./assets/circle.svg"
                   alt="colourful circle"
                   class="circle"
                />
                <img
-                  src="/assets/logo-light-blue.svg"
+                  src="./assets/logo-light-blue.svg"
                   alt="text logo"
                   id="text-logo"
                />
@@ -206,7 +206,7 @@
             <div class="service-list">
                <a class="service-item" href="#">
                   <img
-                     src="/assets/Strategic-planning.png"
+                     src="./assets/Strategic-planning.png"
                      class="service-img"
                      alt="strategic planning service"
                   />
@@ -214,7 +214,7 @@
                </a>
                <a class="service-item" href="#">
                   <img
-                     src="/assets/Business-analysis.png"
+                     src="./assets/Business-analysis.png"
                      class="service-img"
                      alt="business analysis service"
                   />
@@ -222,7 +222,7 @@
                </a>
                <a class="service-item" href="#">
                   <img
-                     src="/assets/Discovery.png"
+                     src="./assets/Discovery.png"
                      class="service-img"
                      alt="discovery service"
                   />
@@ -231,7 +231,7 @@
 
                <a class="service-item" href="#">
                   <img
-                     src="/assets/Solution-design.png"
+                     src="./assets/Solution-design.png"
                      class="service-img"
                      alt="solution design service"
                   />
@@ -239,7 +239,7 @@
                </a>
                <a class="service-item" href="#">
                   <img
-                     src="/assets/Build-and-test.png"
+                     src="./assets/Build-and-test.png"
                      class="service-img"
                      alt="build and test service"
                   />
@@ -247,7 +247,7 @@
                </a>
                <a class="service-item" href="#">
                   <img
-                     src="/assets/Onboarding.png"
+                     src="./assets/Onboarding.png"
                      class="service-img"
                      alt="onboarding service"
                   />
@@ -256,7 +256,7 @@
 
                <a class="service-item" href="#">
                   <img
-                     src="/assets/Custom-code.png"
+                     src="./assets/Custom-code.png"
                      class="service-img"
                      alt="custom code service"
                   />
@@ -264,7 +264,7 @@
                </a>
                <a class="service-item" href="#">
                   <img
-                     src="/assets/Bespoke-UI.png"
+                     src="./assets/Bespoke-UI.png"
                      class="service-img"
                      alt="bespoke ui service"
                   />
@@ -272,7 +272,7 @@
                </a>
                <a class="service-item" href="#">
                   <img
-                     src="/assets/Systems-integrations.png"
+                     src="./assets/Systems-integrations.png"
                      class="service-img"
                      alt="systems integration service"
                   />
@@ -383,13 +383,17 @@
                      class="form-element"
                   ></textarea>
                   <div class="btn-wrap">
-                     <input type="submit" value="contact us" class="purple-btn" />
+                     <input
+                        type="submit"
+                        value="contact us"
+                        class="purple-btn"
+                     />
                   </div>
                </form>
             </div>
             <div class="img-wrap">
                <img
-                  src="/assets/spaceship.svg"
+                  src="./assets/spaceship.svg"
                   alt="spaceship"
                   class="spaceship"
                />
