added responsive design

--- a/index.html
+++ b/index.html
@@ -168,6 +168,7 @@
                      </g>
                   </g>
                </svg>
+               <h1 class="big">Innovate to elevate.</h1>
                <div class="lower-text-wrap">
                   <p class="contact-text">
                      Salesforce integrations and consulting
@@ -189,13 +190,100 @@
                outpace your competitors and dominate your market.
             </p>
             <h2>
-               don't just addapt<br />
+               don't just adapt<br />
                LEAD WITH INNOVATION.
             </h2>
          </div>
       </div>
 
-      <div class="content-3">
+      <div class="content-3 responsive">
+         <div class="content">
+            <h3 class="main">SERVICES</h3>
+            <h3 class="lower">CONSULTING</h3>
+            <div class="service-list-responsive">
+               <a class="service-item-responsive" href="#">
+                  <img
+                     src="./assets/Strategic-planning.png"
+                     class="service-img"
+                     alt="strategic planning service"
+                  />
+                  <p class="text">Strategic Planning</p>
+               </a>
+               <a class="service-item-responsive" href="#">
+                  <img
+                     src="./assets/Business-analysis.png"
+                     class="service-img"
+                     alt="business analysis service"
+                  />
+                  <p class="text">Business Analysis</p>
+               </a>
+               <a class="service-item-responsive" href="#">
+                  <img
+                     src="./assets/Discovery.png"
+                     class="service-img"
+                     alt="discovery service"
+                  />
+                  <p class="text">Discovery</p>
+               </a>
+            </div>
+            <h3 class="lower">IMPLEMENTATION</h3>
+            <div class="service-list-responsive">
+               <a class="service-item-responsive" href="#">
+                  <img
+                     src="./assets/Solution-design.png"
+                     class="service-img"
+                     alt="solution design service"
+                  />
+                  <p class="text">Solution Design</p>
+               </a>
+               <a class="service-item-responsive" href="#">
+                  <img
+                     src="./assets/Build-and-test.png"
+                     class="service-img"
+                     alt="build and test service"
+                  />
+                  <p class="text">Build & Test</p>
+               </a>
+               <a class="service-item-responsive" href="#">
+                  <img
+                     src="./assets/Onboarding.png"
+                     class="service-img"
+                     alt="onboarding service"
+                  />
+                  <p class="text">Onboarding</p>
+               </a>
+            </div>
+            <h3 class="lower">DEVELOPMENT</h3>
+            <div class="service-list-responsive">
+               <a class="service-item-responsive" href="#">
+                  <img
+                     src="./assets/Custom-code.png"
+                     class="service-img"
+                     alt="custom code service"
+                  />
+                  <p class="text">Custom Code</p>
+               </a>
+               <a class="service-item-responsive" href="#">
+                  <img
+                     src="./assets/Bespoke-UI.png"
+                     class="service-img"
+                     alt="bespoke ui service"
+                  />
+                  <p class="text">Bespoke UI</p>
+               </a>
+               <a class="service-item-responsive" href="#">
+                  <img
+                     src="./assets/Systems-integrations.png"
+                     class="service-img"
+                     alt="systems integration service"
+                  />
+                  <p class="text">Systems Integration</p>
+               </a>
+            </div>
+         </div>
+      </div>
+
+      <div class="content-3 xl-screen">
          <div class="content">
             <div class="service-text">
                <h3 class="main">SERVICES</h3>
