--- a/index.html
+++ b/index.html
@@ -489,6 +489,28 @@
          </div>
       </div>
 
+      <footer>
+         <div class="content-footer">
+            <div class="logo-wrap">
+               <img
+                  src="./assets/logo-light-blue.svg"
+                  alt="text logo"
+                  id="text-logo"
+               />
+            </div>
+            <address>
+               <a href="mailto:info@clienture.com">info@clienture.com</a>
+               <a
+                  href="https://maps.app.goo.gl/1APeS8goq6QaoDMJ8"
+                  target="_blank"
+                  >Vilnius, 123</a
+               >
+               <a href="tel:+37061111111">+37061234567</a>
+            </address>
+            <p id="datetime"></p>
+         </div>
+      </footer>
+
       <script src="script.js"></script>
    </body>
 </html>
