--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
          <div class="content">
             <div class="logo-wrap">
                <img
-                  src="./assets/circle.svg"
+                  src="./assets/new-circle.png"
                   alt="colourful circle"
                   class="circle"
                />
