feat: header style changes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,6 @@
                   id="text-logo"
                />
             </div>
-            <!-- <img src="/assets/big-text.svg" height="257" /> -->
             <div class="text-wrap">
                <?xml version="1.0" encoding="UTF-8"?>
                <svg
@@ -501,11 +500,11 @@
             <address>
                <a href="mailto:info@clienture.com">info@clienture.com</a>
                <a
-                  href="https://maps.app.goo.gl/1APeS8goq6QaoDMJ8"
+                  href="https://maps.app.goo.gl/XzAXGZpj4Ln62Xq18"
                   target="_blank"
-                  >Vilnius, 123</a
+                  >Workland Quadrum, Vilnius, Lithuania</a
                >
-               <a href="tel:+37061111111">+37061234567</a>
+               <a href="tel:+37063925392">+370 639 25 392</a>
             </address>
             <p id="datetime"></p>
          </div>
