--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,11 @@
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
       <link rel="stylesheet" href="style.css" />
+      <link
+         rel="stylesheet"
+         type="text/css"
+         href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css"
+      />
       <title>Clienture - Innovate to elevate</title>
    </head>
    <body>
@@ -427,7 +432,7 @@
                      your success.
                   </p>
                </div>
-               <form>
+               <form novalidate>
                   <input
                      type="text"
                      name="name"
@@ -511,5 +516,9 @@
       </footer>
 
       <script src="script.js"></script>
+      <script
+         type="text/javascript"
+         src="https://cdn.jsdelivr.net/npm/toastify-js"
+      ></script>
    </body>
 </html>
