minor css changes

--- a/public/index.html
+++ b/public/index.html
@@ -177,7 +177,7 @@
                   <p class="contact-text">
                      Salesforce integrations and consulting
                   </p>
-                  <a href="#" class="purple-btn">contact us</a>
+                  <a href="#contact-us" class="purple-btn">contact us</a>
                </div>
             </div>
          </div>
@@ -425,7 +425,9 @@
          <div class="content">
             <div class="form-wrap">
                <div class="header-wrap">
-                  <h2>Let's elevate your salesforce experience together!</h2>
+                  <h2 id="contact-us">
+                     Let's elevate your salesforce experience together!
+                  </h2>
                   <p>
                      Reach out now to discuss your unique needs and how our
                      expert integration and consulting services can help drive
